# dice

./: .gitignore  CMakeLists.txt  Die.cpp  Die.h  LICENSE  OptimizationThread.cpp  OptimizationThread.h  PT.cpp  PT.h  PointSphere.cpp  PointSphere.h  STL.cpp  STL.h  Vec3.cpp  Vec3.h  main.cpp  readme.md
.github/workflows/: release.yml
best/: 10.csv  100.csv  1000.csv  1002.csv  1004.csv  1006.csv  1008.csv  1010.csv  1012.csv  1014.csv  1016.csv  1018.csv  102.csv  1020.csv  1022.csv  1024.csv  104.csv  106.csv  108.csv  110.csv  112.csv  114.csv  116.csv  118.csv  12.csv  120.csv  122.csv  124.csv  126.csv  128.csv  130.csv  132.csv  134.csv  136.csv  138.csv  14.csv  140.csv  142.csv  144.csv  146.csv  (+468 more)
qt/: BuildModelDialog.cpp  BuildModelDialog.h  DieVisualization.cpp  DieVisualization.h  MainWindow.cpp  MainWindow.h  PointsWindow.cpp  PointsWindow.h
stl/: Common.h  Engrave.cpp  Engrave.h  Font.cpp  Font.h  STL.cpp  STL.h  Sphere.cpp  Sphere.h
stl/font/: BlankFont.cpp  Courier.cpp  Courier.h  CourierData.inc  FontBase.cpp  FontHelpers.cpp  PixelFont.cpp  Seg7Font.cpp
